--- a/constraintexpandablelayout/src/main/res/values/attr.xml
+++ b/constraintexpandablelayout/src/main/res/values/attr.xml
@@ -2,14 +2,15 @@
 <resources>
     <declare-styleable name="ConstraintExpandableLayout">
         <attr name="el_collapsedHeight" format="dimension"/>
-        <attr name="el_withShadow" format="boolean"/>
+        <attr name="el_showShadow" format="boolean"/>
         <attr name="el_shadowHeight" format="dimension"/>
         <attr name="el_moreText" format="string"/>
-        <attr name="el_collapseDuration" format="integer"/>
+        <attr name="el_animationDuration" format="integer"/>
+        <attr name="el_moreColor" format="color"/>
         <attr name="el_initialState" format="enum">
-            <enum name="collapsed" value="1"/>
-            <enum name="expanded" value="2"/>
-            <enum name="simple" value="3"/>
+            <enum name="collapsed" value="0"/>
+            <enum name="expanded" value="1"/>
+            <enum name="static" value="2"/>
         </attr>
     </declare-styleable>
 </resources>
