--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<ru.rhanza.constraintexpandablelayout.ConstraintExpandableLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity"
+        >
 
     <TextView
             android:id="@+id/text"
@@ -17,6 +18,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="20sp"
-            tools:ignore="HardcodedText"/>
+            tools:ignore="HardcodedText"
+            />
 
-</android.support.constraint.ConstraintLayout>
+</ru.rhanza.constraintexpandablelayout.ConstraintExpandableLayout>
