--- a/constraintexpandablelayout/src/main/res/values/attr.xml
+++ b/constraintexpandablelayout/src/main/res/values/attr.xml
@@ -10,7 +10,7 @@
         <attr name="el_initialState" format="enum">
             <enum name="collapsed" value="0"/>
             <enum name="expanded" value="1"/>
-            <enum name="static" value="2"/>
+            <enum name="statical" value="2"/>
         </attr>
     </declare-styleable>
 </resources>
