## third step of implementation
*  make constrainSet from layout
*  make good state restore
*  add extensions file (with transition listener event)
*  add argument 'forced' for collapse/expand method

--- a/constraintexpandablelayout/src/main/res/layout/expandable_layout.xml
+++ b/constraintexpandablelayout/src/main/res/layout/expandable_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:app="http://schemas.android.com/apk/res-auto"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
         >
 
     <LinearLayout
@@ -36,8 +36,8 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="4dp"
             android:layout_marginStart="8dp"
-            android:rotation="180"
             android:contentDescription="@string/defaultMoreText"
+            android:visibility="gone"
             app:layout_constraintEnd_toStartOf="@+id/evMoreText"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -55,6 +55,7 @@
             android:text="@string/defaultMoreText"
             android:textAllCaps="true"
             android:textColor="@color/defaultMoreColor"
+            android:visibility="gone"
             app:fontFamily="sans-serif-medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -62,4 +63,4 @@
             app:layout_constraintBottom_toBottomOf="@+id/evMoreImage"
             app:layout_constraintTop_toTopOf="@+id/evMoreImage"
             />
-</android.support.constraint.ConstraintLayout>
+</merge>
