--- a/constraintexpandablelayout/src/main/res/layout/expandable_layout_collapsed.xml
+++ b/constraintexpandablelayout/src/main/res/layout/expandable_layout_collapsed.xml
@@ -8,7 +8,7 @@
     <LinearLayout
             android:id="@+id/evHolder"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/default_collapsed_height"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -22,9 +22,8 @@
     <View
             android:id="@+id/evShadow"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="@dimen/default_shadow_height"
             android:background="@drawable/fade_out"
-            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/evHolder"
             />
 
@@ -36,7 +35,6 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="4dp"
             android:layout_marginStart="8dp"
-            android:rotation="180"
             android:contentDescription="@string/defaultMoreText"
             app:layout_constraintEnd_toStartOf="@+id/evMoreText"
             app:layout_constraintHorizontal_bias="0.5"
