--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,15 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
+        app:el_animationDuration="100"
+        app:el_collapsedHeight="200dp"
+        app:el_moreText="Expand/Collapse"
+        app:el_shadowHeight="60dp"
+        app:el_showShadow="true"
+        app:el_moreColor="@android:color/black"
         >
 
     <TextView
