--- a/constraintexpandablelayout/src/main/res/values/attr.xml
+++ b/constraintexpandablelayout/src/main/res/values/attr.xml
@@ -4,7 +4,7 @@
         <attr name="el_collapsedHeight" format="dimension"/>
         <attr name="el_showShadow" format="boolean"/>
         <attr name="el_shadowHeight" format="dimension"/>
-        <attr name="el_hideButton" format="boolean"/>
+        <attr name="el_showButton" format="boolean"/>
         <attr name="el_moreText" format="string"/>
         <attr name="el_animationDuration" format="integer"/>
         <attr name="el_moreColor" format="color"/>
