--- a/constraintexpandablelayout/src/main/res/values/attr.xml
+++ b/constraintexpandablelayout/src/main/res/values/attr.xml
@@ -8,6 +8,7 @@
         <attr name="el_moreText" format="string"/>
         <attr name="el_animationDuration" format="integer"/>
         <attr name="el_moreColor" format="color"/>
+        <attr name="el_animationSceneRoot" format="reference"/>
         <attr name="el_initialState" format="enum">
             <enum name="collapsed" value="0"/>
             <enum name="expanded" value="1"/>
