--- a/constraintexpandablelayout/src/main/res/layout/expandable_layout.xml
+++ b/constraintexpandablelayout/src/main/res/layout/expandable_layout.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
             android:id="@+id/evHolder"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
