--- a/constraintexpandablelayout/src/main/res/layout/expandable_layout_collapsed.xml
+++ b/constraintexpandablelayout/src/main/res/layout/expandable_layout_collapsed.xml
@@ -35,6 +35,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="4dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:contentDescription="@string/defaultMoreText"
             app:layout_constraintEnd_toStartOf="@+id/evMoreText"
             app:layout_constraintHorizontal_bias="0.5"
