--- a/constraintexpandablelayout/src/main/res/layout/expandable_layout_expanded.xml
+++ b/constraintexpandablelayout/src/main/res/layout/expandable_layout_expanded.xml
@@ -36,6 +36,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="4dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:rotation="180"
             android:contentDescription="@string/defaultMoreText"
             app:layout_constraintEnd_toStartOf="@+id/evMoreText"
