--- a/app/src/main/res/layout/activity_transition_parent.xml
+++ b/app/src/main/res/layout/activity_transition_parent.xml
@@ -17,7 +17,7 @@
 
         <LinearLayout
                 android:id="@+id/container2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
@@ -33,7 +33,6 @@
                     />
 
         </LinearLayout>
-
 
         <include
                 android:id="@+id/third"
